# mcp_task_list_app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  fly.toml  main.py  mcp_logging.py  pyproject.toml  supabase_service.py
