[project]
name = "mcp-task-list"
version = "0.1.0"
description = "task list app using mcp"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.11.3",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.47.2",
    "uvicorn>=0.35.0",
    "websockets<14",
    "datadog-api-client>=2.41.0",
]
